mysql-wp-kube/deploy-wordpress.yml
# source: https://kubernetes.io/docs/tutorials/stateful-application/mysql-wordpress-persistent-volume/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        resources:
          requests:
            #keep at 256 to prevent HTTP_ERROR issue on media upload, libs need this
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        resources:
          requests:
            #keep at 256 to prevent HTTP_ERROR issue on media upload, libs need this
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: "500m"

        command:
          - "/cloud_sql_proxy"
          - "-instances=wavescale-test-0bbc:europe-west4:test-mysql=tcp:3306"
          -  "-credential_file=/secrets/credentials.json"
        volumeMounts:
          - mountPath: "/secrets"
            name: cloud-sql-proxy-sa-config
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs

 
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: cloud-sql-proxy-sa-config
        secret:
          secretName: cloudsql-instance-credentials
      - name: ssl-certs
        hostPath:
            path: /etc/ssl/certs
