mysql-wp-kube/something2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: something2-svc
  labels:
    app: something2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: something2
    tier: frontend
  type: NodePort
