mysql-wp-kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress 
  annotations: 
    ingress.gcp.kubernetes.io/pre-shared-cert: something, something2
    kubernetes.io/ingress.global-static-ip-name: test-wp-static
    # with the setting here, this blocks all incoming http traffic from the client
    # we will need to redrirect user traffic to https
    # kubernetes.io/ingress.allow-http: "false"


spec:
  rules:
  - host: something2.wavescale.cloud
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service: 
            name: something2-svc
            port: 
              number: 80
            
  - host: something.wavescale.cloud
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service: 
            name: wordpress-svc
            port: 
              number: 80
